--- a/src/ImageCard/ImageCard.module.css
+++ b/src/ImageCard/ImageCard.module.css
@@ -1,4 +1,9 @@
 .image {
   width: 350px;
   height: 250px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  transition: 300ms ease-in-out;
+}
+.image:hover {
+  transform: scale(1.02);
 }
