--- a/src/ImageModal/ImageModal.module.css
+++ b/src/ImageModal/ImageModal.module.css
@@ -1,18 +1,44 @@
 .Modal {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  right: auto;
-  bottom: auto;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  background: #000000b3;
+  border-radius: 2px;
+  overflow: auto;
+  outline: none;
+  height: 90%;
 }
 
 .Overlay {
   position: fixed;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgb(6, 6, 6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000b3;
+}
+
+.text {
+  color: azure;
+  font-size: 24px;
+  align-items: center;
+}
+.image {
+  display: block;
+  height: 85%;
+}
+.textContainer {
+  padding-left: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 24px;
+  color: #f5f5f5;
+}
+.tags {
+  display: flex;
+  font-size: 24px;
+  padding-left: 0;
+  color: #f5f5f5;
 }
